Fix overflow scrollbars

--- a/partials/_base.scss
+++ b/partials/_base.scss
@@ -21,4 +21,6 @@ body {
   position: relative;
   display: grid;
   grid-template-columns: 1fr;
+
+  overflow: hidden;
 }
